dashboard/static/css/style.css
/* ... */
#util-menu-small a {
	padding-left: 44px;
	padding-left: 2.75rem;
	background-repeat: no-repeat;
	background-size: 20px;
	background-size: 1.25rem;
	background-position: center left 12px;
	background-position: center left 0.75rem;
}

.colapseLeft{
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: black;
	opacity: 0.5;
	z-index: 5;
	display: none;
}

/*
*** Widgets Styles
*/

.widget {
	margin-bottom: 7px;
	margin-bottom: 0.4375rem;
	margin-top: 0.5rem;
}

.widget.colapsed span {	display: none; }
.widget.colapsed label { display: none; }

.widget ul {
	list-style-type:none;
	padding-left: 0px !important;
}

.widget ul li a {
	height: 46px;
	height : 2.875rem;
	padding-left : 0px !important;
}


.widget.colapsed ul {
	list-style-type: none;
	padding-left: 0px !important;
}

.widget.colapsed ul li a {
	height: 46px;
	height : 2.875rem;
	padding-left : 0px !important;
}

.widget ul li:first-child label {
	border-top: none;
	border-bottom : 1px solid #eee;
	padding: 5px 8px 2px;
	padding: 0.3125rem 0.5rem 0.125rem;
	background: #fff;
	background: none;
	color: #ddd;
}

.widget .hidden .toHide { display: none;}

.widget .refresh {
	background: url('../img/icon_refresh.png') center no-repeat;
	background-size: 20px;
	background-size: 1.25rem;
	height: 36px;
	height: 2.25rem;
}

.widget .refresh a {
	height: 36px;
	height: 2.25rem;
}

.widget .sortable-ghost {
	border: 2px dashed #ccc;
	background : url('../img/icon_plus_cross.png') no-repeat center;
	background-size: 32px;
	background-size: 2rem;
}

.widget .sortable-ghost > * { visibility: hidden; }

.widget .tool {
	background-image: url('../img/icon_status_green.png');
	background-repeat: no-repeat;
	background-size: 0.75rem;
	background-position: center left 1.0875rem;
	text-align: left;
}

.widget .tool.err 	{background-image: url('../img/icon_status_red.png');}
.widget .tool.disc 	{background-image: url('../img/icon_status_grey.png');}

.widget .tools-current .tool {
	background-color: #999;
	background-color: rgba(0,0,0,0.2);
}

.widget .tools-other .tool:hover,  .widget .refresh a:hover{
	background-color: #777;
	background-color: rgba(0, 0, 0, 0.05) !important;
}

.widget .tool a {
	z-index: 1005;
	padding-left: 44px !important;
	padding-left: 2.75rem !important;
	width: 80.25%;
}

.widget .tool a:hover {
	/*
	background-color: rgba(0, 0, 0, 0);
	*/
}

.widget .tool span {
	-webkit-transition: opacity .15s;
	transition: opacity .15s;
	filter: alpha(opacity=0); /* For IE8 and earlier */
	opacity: 0;
	cursor: pointer;
	color: #c00;
	width: 19.75%;
	height: 46px;
	height: 2.875rem;
	background: url('../img/icon_details.png') center no-repeat;
	background-size: 20px;
	background-size: 1.25rem;
	float: right;
	z-index: 1010;
}

.widget .tool:hover span {
	filter: alpha(opacity=100); /* For IE8 and earlier */
	opacity: 1;
}

.widget .tool span:hover {
	background-size: 18px;
	background-size: 1.125rem;
}

.widget ul label.settings:hover {
	background-image: url('../img/icon_more.png');
	background-repeat: no-repeat;
	background-size: 30px;
	background-size: 1.875rem;
	background-position: center right 14px;
	background-position: center right 0.875rem;
}

.icon-bar { background: #fff;}

@media only screen and (min-width: 64.063em) {
	.icon-bar.large-vertical {
		margin-right: 5px;
		margin-right: 0.3125rem;
	}
}

#icon_joystick 		{ 
	width: 50px;
	height: 50px;
	background-image: url('../img/icon_keypad.png');
	position: absolute;
    top: 12%;
    left: 10%;
	transform: scale(.9,1);	
	background-repeat: no-repeat;
	background-size: 3rem;
	background-position: center;
}


.left-slide-menu {
	display: none;
	position: fixed;
	list-style-type: none;
	overflow: hidden;
    margin: 0;
    padding: 0;
	background-color: #444444;
	width: 46px;
	transition: width 0.5s;
	white-space: nowrap;
	height: 46px;
}

.left-slide-menu li:first-child{
	background-color: #333333;
}

.left-slide-menu li {
	display: inline-block;
}

.left-slide-menu li a {
	display: block;
    text-align: center;
    padding: 10px;
    text-decoration: none;
    background-repeat: no-repeat;
    background-size: cover;
    margin: 13px;
}

.open#left-slide-button {
/* 	background-image: url('../img/icon_colapse_r.png'); */
}

#left-slide-button {
/*	background-image: url('../img/icon_colapse.png'); */
}

#man-tab {
	cursor: pointer;
	position: absolute;
    top: -0.5em;
    left: 4px;
	/* right: 80%; */
    height: 0.5em;
    width: 37px;
    background-color: #E6CF89;
	border-radius: 4px 4px 0  0;
	/* box-shadow: inset -1px 0px 1px 0px rgba(0,0,0,0.75), -2px 0px 3px 0px rgba(0,0,0,0.75); */
	transition: all 0.2s;
}

#icon_drive:before {
	position: absolute;
    font-family: 'FontAwesome';
    font-size: 22px;
    top: 5px;
    left: 10px;
    content: "\F11B";
}

.drive-enter {
	cursor: pointer;
	background-color: #2b2b23;
	position: absolute;
	bottom: 0;
	left:0;
	width: 100%;
	height: 100px;

}


/****** Right Menu ******/

#job-info ul li:first-child label {
	background-color: #aaa;
	text-align: center;
	color: #fff;
	font-family: 'Droid_Sans_Mono';
	font-size: 15rem;
	font-size: 0.9375rem;
	font-weight: bolder;
	text-transform: capitalize;
	border-bottom: none;
	margin: 0 auto;
}

.progress-container {
	border: 2px solid black;
	background: gray;
	border-radius: 5px;
	height: 20px;
}

.progress {
	border-radius: 1px;
	border: none;
	background: repeating-linear-gradient(
	  45deg,
	  #2E3865,
	  #2E3865 5px,
	  #1C223D 5px,
	  #1C223D 10px
	);
	background-color:#2E3865;
	height: 100%;
}


#job-info .button {margin:0;}
#job-info .control {padding:0;}
#job-info .button.warning { background-color:#dd8728;}
#job-info .button.alert { background-color:#9c210c;}
#job-info .alert-box {
	border: none;
	color: #fff;
	background: #aaa;
	font-family: 'Droid_Sans_Mono';
	font-size: 16px;
	font-size: 1rem;
}
#job-info .file-info > label {
	background-color: #eee;
	color: #666;
	border-top: 0px;
	text-align: center;
}
/* ... */

